Fix images align in table (#403)

--- a/css/main.less
+++ b/css/main.less
@@ -378,7 +378,7 @@ ul {
         margin-bottom: 20px;
 
         .image-wrapper {
-            margin: 0;
+            margin: 0 auto;
         }
 
         table {
